# ZPE-XR

./: .gitignore  .zenodo.json  AUDITOR_PLAYBOOK.md  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETION_REPORT_V6.md  CONTRIBUTING.md  DATA_SETUP.md  GOVERNANCE.md  LICENSE  Makefile  NOTICE.md  PUBLIC_AUDIT_LIMITS.md  PYPI_UPLOAD_READY.md  README.md  REPRODUCIBILITY.md  SECURITY.md  SUPPORT.md  pyproject.toml  release_readiness.json
.github/workflows/: auto-add-to-project.yml  ci.yml  publish.yml
code/: README.md  pyproject.toml
code/fixtures/: benchmark_config.json  embodiment_record_invalid_crc_provenance_v1.json  embodiment_record_valid_surrogate_v1.json  resource_lock.json  synthetic_hot3d_snapshot_v1.json
code/rust/zpe_xr_kernel/: Cargo.toml
code/rust/zpe_xr_kernel/src/: lib.rs
code/scripts/: _bootstrap.py  export_comparator_triage.py  export_public_benchmark_manifest.py  generate_fixtures.py  lock_resources.py  max_resource_probe.py  run_appendix_e.py  run_denominator_baseline_engine.py  run_gate_b.py  run_gate_c.py  run_gate_d.py  run_gate_e.py  run_gate_f.py  run_gate_m1.py  run_gate_m2.py  run_gate_m3.py  run_gate_m4.py  run_interhand_benchmark.py  run_phase1_core_closure.py  run_phase2_direct_comparator.py  run_phase2_outward_corpus.py  run_phase2_pre_runpod.py  run_phase2_runtime_closure.py  run_phase3_packaging.py  run_phase4_cold_start_audit.py  run_phase4_contactpose_benchmark.py  run_phase5_contactpose_multi_sequence.py  run_phase6_mac_comparator_benchmark.py  run_phase7_ultraleap_local_benchmark.py  run_phase8_photon_local_benchmark.py  sync_staged_repo.py
code/source/zpe_xr/: __init__.py  _stream.py  api.py  codec.py  cold_start_audit.py  comet_utils.py  comparator_catalog.py  comparator_triage.py  constants.py  contactpose_adapter.py  denominator_baseline.py  embodiment_record.py  example_support.py  external_benchmarks.py  gesture.py  headset_surrogate.py  interhand_adapter.py  interhand_benchmark.py  metadata.py  metrics.py  models.py  outward_workload.py  package_surface.py  phase6_benchmarks.py  phase7_ultraleap_benchmarks.py  phase8_photon_benchmarks.py  photon_hands_proxy.py  pipeline.py  public_benchmark_catalog.py  runtime_paths.py  synthetic.py  ultraleap_vectorhand.py  unity.py
code/src/zpe_xr/: __init__.py  gesture.py  io_utils.py  network.py  outward_workload.py  package_surface.py
code/tests/: conftest.py  test_benchmarks_doc.py  test_clean_install.py  test_codec.py  test_comparator_triage.py  test_contactpose_adapter.py  test_denominator_baseline.py  test_determinism.py  test_embodiment_record.py  test_examples.py  test_external_benchmarks.py  test_gesture.py  test_headset_surrogate.py  test_interhand_adapter.py  test_interhand_benchmark.py  test_network.py  test_outward_workload.py  test_package_surface.py  test_phase4_cold_start.py  test_phase6_benchmarks.py  test_photon_hands_proxy.py  test_public_api.py  test_public_benchmark_catalog.py  test_runtime_paths.py  test_source_root_alignment.py  test_streaming_latency.py  test_ultraleap_vectorhand.py
docs/: ARCHITECTURE.md  CAPTURE_EVIDENCE_CLASSES.md  CURRENT_PUBLIC_STATUS.md  DOC_REGISTRY.md  FALSIFICATION_REPORT.md  FAQ.md  HEADSET_SURROGATE_STRATEGY.md  LEGAL_BOUNDARIES.md  README.md  README_REFRESH_PROPOSAL.md  SUPPORT.md  market_surface.json
docs/_reorientation/2026-04-17/: FIX_LOG.md  NOVELTY_CARD.md  OPEN_QUESTIONS.md
docs/schemas/: embodiment_record.schema.json  real_headset_capture.schema.json
examples/: contactpose_roundtrip.py  streaming_demo.py  websocket_bridge.py
executable/: verify.py
proofs/: COMPARATOR_TRIAGE.md  FINAL_STATUS.md  README.md  RELEASE_READINESS_REPORT.md
proofs/artifacts/2026-02-20_zpe_xr_wave1/: before_after_metrics.json  blockers_before_after.json  claim_final_status.json  claim_status_delta.md  command_log.txt  concept_open_questions_resolution.md  concept_resource_traceability.json  determinism_replay_results.json  gate_appendix_e_result.json  gate_b_repro_metadata.json  gate_d_summary.json  gate_execution_matrix.json  gate_f_result.json  gate_m1_result.json  gate_m2_result.json  gate_m4_result.json  handoff_manifest.json  impracticality_decisions.json  integration_readiness_contract.json  interaction_stress_report.json  license_risk_register_xr.md  max_claim_resource_map.json  max_resource_lock.json  max_resource_probe_summary.json  max_resource_validation_log.md  net_new_gap_closure_matrix.json  quality_gate_scorecard.json  regression_results.txt  residual_risk_register.md  resource_attempts_log.json  runpod_exec_plan.md  runpod_expected_artifacts.json  runpod_readiness_manifest.json  runpod_requirements_lock.txt  xr_gesture_eval.json  xr_latency_benchmark.json  xr_packet_loss_resilience.json  xr_unity_roundtrip.json
proofs/artifacts/2026-03-20_zpe_xr_phase2_pre_runpod/: comet_run_manifest.json  phase2_comparator_matrix.json  phase2_comparator_matrix.md  phase2_execution_summary.json  phase2_outward_corpus_probe.json  phase2_outward_corpus_probe.md  phase2_runtime_probe_matrix.json  phase2_runtime_probe_matrix.md  phase2_step_logs.json  staged_sync_report.json
proofs/artifacts/2026-03-20_zpe_xr_phase3_packaging/: comet_run_manifest.json  phase3_execution_summary.json  phase3_package_surface.json  phase3_package_surface.md  phase3_staged_surface_files.json  phase3_step_logs.json  phase3_wedge_claims.json  (+2 more)
proofs/runbooks/: 20260321T165000Z_codex_technical_alignment_plan.md  20260321T203028Z_codex_receipt.md  20260321T220245Z_codex_receipt.md  20260321T231920Z_codex_receipt.md  COMMAND_LEDGER.md  REPO_TECHNICAL_ALIGNMENT_EXECUTION_PROMPT.md  REPO_TECHNICAL_EXECUTION_SUPPLEMENT.md  RUNBOOK_GATE_A.md  RUNBOOK_GATE_B.md  RUNBOOK_GATE_C.md  RUNBOOK_GATE_D.md  RUNBOOK_GATE_E.md  RUNBOOK_GATE_E_APPENDIX.md  RUNBOOK_GATE_F.md  RUNBOOK_GATE_M1.md  RUNBOOK_GATE_M2.md  RUNBOOK_GATE_M3.md  RUNBOOK_GATE_M4.md  RUNBOOK_ZPE_XR_MASTER.md  ZER0PA_REPO_DOCS_PLAYBOOK_CANONICAL_2026-03-21.md
(+69 files in other folders)
