[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zpe-xr"
version = "0.0.0"
description = "Deterministic XR hand-stream codec and evaluation harness"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Zer0pa"}]
license = {text = "LicenseRef-Zer0pa-SAL-6.0"}
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["zpe_xr*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
