[build-system]
requires = ["maturin>=1.10,<2"]
build-backend = "maturin"

[project]
name = "zpe-xr"
version = "0.3.0"
description = "Deterministic XR hand-pose transport codec. 56x compression, sub-mm fidelity, 0.025ms latency, CPU-native."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "LicenseRef-Zer0pa-SAL-6.0"}
authors = [{name = "Zer0pa"}]
keywords = ["xr", "codec", "hand-tracking", "networking", "openxr"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Rust",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "numpy>=2,<3",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "maturin>=1.10,<2",
  "pytest>=8,<9",
  "twine>=5,<7",
  "websockets>=13,<16",
  "grip>=4,<5",
]
test = [
  "pytest>=8,<9",
  "websockets>=13,<16",
]
docs = [
  "grip>=4,<5",
]

[project.urls]
Homepage = "https://github.com/Zer0pa/ZPE-XR"
Documentation = "https://github.com/Zer0pa/ZPE-XR/tree/main/docs"
Repository = "https://github.com/Zer0pa/ZPE-XR"
Changelog = "https://github.com/Zer0pa/ZPE-XR/blob/main/CHANGELOG.md"
Issues = "https://github.com/Zer0pa/ZPE-XR/issues"

[tool.maturin]
bindings = "pyo3"
manifest-path = "rust/zpe_xr_kernel/Cargo.toml"
module-name = "zpe_xr._kernel"
python-source = "source"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
