[build-system]
requires = ["maturin>=1.10,<2"]
build-backend = "maturin"

[project]
name = "zpe-xr"
version = "0.3.0"
description = "Deterministic XR hand-pose transport codec. ~24x compression, sub-mm fidelity, sub-ms latency, CPU-native."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "LicenseRef-Zer0pa-SAL-7.0"}
authors = [{name = "Zer0pa"}]
keywords = ["xr", "codec", "hand-tracking", "networking", "openxr"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "numpy>=2,<3",
]

[project.optional-dependencies]
dev = [
  "maturin>=1.10,<2",
  "pytest>=8,<9",
  "twine>=5,<7",
]

[project.urls]
Homepage = "https://github.com/Zer0pa/ZPE-XR"
Repository = "https://github.com/Zer0pa/ZPE-XR"
Issues = "https://github.com/Zer0pa/ZPE-XR/issues"

[tool.maturin]
bindings = "pyo3"
manifest-path = "rust/zpe_xr_kernel/Cargo.toml"
module-name = "zpe_xr._kernel"
python-source = "source"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
