[package]
name = "zpe_xr_kernel"
version = "0.3.0"
edition = "2021"
authors = ["Zer0pa (Pty) Ltd <architects@zer0pa.ai>"]
license = "LicenseRef-Zer0pa-SAL-7.0"

[lib]
name = "_kernel"
crate-type = ["cdylib"]

[dependencies]
crc32fast = "1"
pyo3 = { version = "0.28.2", features = ["extension-module"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
